<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="app_name">"ITAUSER"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scan">SCAN</string>
    <string name="name">Name</string>
    <string name="price_rs">Price Rs.</string>
    <string name="quantity">Quantity</string>
    <string name="choose_a_category">CHOOSE A CATEGORY</string>
    <string name="save">SAVE</string>
    <string name="unit">Unit</string>
    <string name="add_item_to_bill">+ ADD ITEM TO BILL</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="tax">Tax</string>
    <string name="get_payment">GET PAYMENT</string>
    <string name="date">DATE</string>
    <string name="invoice_no">INVOICE NO</string>
    <string name="name1">NAME</string>
    <string name="discount1">DISCOUNT:</string>
    <string name="edit">Edit</string>
    <string name="add_new_category">ADD NEW CATEGORY</string>
    <string name="enter_here">Enter here</string>
    <string name="create_category">CREATE CATEGORY</string>
    <string name="edit_product">EDIT PRODUCT</string>
    <string name="price">PRICE</string>
    <string name="quantity1">QUANTITY</string>
    <string name="discount_amount">DISCOUNT AMOUNT</string>
    <string name="apply_to_sale">APPLY TO SALE</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="category">Category</string>
    <string name="total">Total:₹</string>
    <string name="paid">Paid:₹</string>
    <string name="pay">PAY</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="menu">Menu</string>
    <string name="print">PRINT</string>
    <string name="share">SHARE</string>
    <string name="business_name">Business Name</string>
    <string name="pick_your_shops_location">Pick Your Shops Location</string>
    <string name="store_id">Store ID</string>
    <string name="address">Address</string>
    <string name="addresss">Address....</string>
    <string name="verify">Verify</string>
    <string name="create_new_item">+ CREATE NEW ITEM</string>
    <string name="_0_item">0 item</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="today_s_revenue">TODAY\'S REVENUE</string>
    <string name="week_so_far">WEEK SO FAR</string>
    <string name="items_list">ITEMS LIST</string>
    <string name="volume_and_price">VOLUME AND PRICE</string>
    <string name="billing_and_receipt">BILLING AND RECEIPT</string>
    <string name="account_and_paytm">ACCOUNT AND PAYTM</string>
    <string name="graphs">GRAPHS</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
